hphp/hack/test/typecheck/array_filter2.php.exp
File "array_filter2.php", line 6, characters 21-36:
Invalid argument (Typing[4110])
File "array_filter2.php", line 9, characters 19-21:
Expected int
File "array_filter2.php", line 5, characters 15-27:
But got arraykey
File "array_filter2.php", line 6, characters 21-36:
array_filter converts KeyedContainer<Tk, Tv> to array<Tk, Tv>, and Container<Tv> to array<arraykey, Tv>. Single argument calls additionally remove nullability from Tv.
